--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,9 +1,16 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin "daisyui";
 
 @layer base {
   /* Styling struggles with password manager */
   input[data-com-onepassword-filled] {
     background-clip: text;
+  }
+}
+
+@layer components {
+  .hero-header-title {
+    @apply text-4xl md:text-6xl font-bold text-white;
+    font-family: "Montserrat", sans-serif;
   }
 }
